# trivial-todo-app

./: .gitignore  README.md  VERIFICATION-REPORT.md  pyproject.toml
agents/: supervisor.md
artifacts/: phase_0_done.txt
contracts/: cli-commands.yaml  data-schema.json
docs/: QUICKSTART.md  operational-specification.md  testing-strategy.md
scripts/: check.sh  verify-install.sh
src/trivial_todo_app/: __init__.py  cli.py  storage.py  todo.py
tests/blackbox/: __init__.py  test_user_workflows.py
tests/contracts/: __init__.py  test_data_schema.py
tests/integration/: test_full_flow.py
tests/interfaces/: test_cli_contract.py
tests/unit/: test_cli.py  test_placeholder.py  test_storage.py  test_todo.py
